--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: apiratelimiter
-          image: apiratelimiter
-          imagePullPolicy: Never
+          image: srinithyareddy/apiratelimiter
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
